--- a/momentum/index.html
+++ b/momentum/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width", initial-scale="1.0" />
-    <link rel="stylesheet" href="CSS/style3.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>MOMENTUM</title>
-    <link href="CSS/style3.css" rel="stylesheet" type="text/css" />
+    <link href="CSS/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -40,8 +40,8 @@
       
     </div>
    
-   <script src="JS/greetings3_240828.js"></script>
-   <script src="JS/clock3.js"></script>
+   <script src="JS/greetings.js"></script>
+   <script src="JS/clock.js"></script>
    <script src="JS/quotes.js"></script>
    <script src="JS/background.js"></script>
    <script src="JS/todo.js"></script>
