--- a/reactJs/index_hard.html
+++ b/reactJs/index_hard.html
@@ -5,27 +5,26 @@
   </body>
   <script src="https://www.unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement(
-      "h3",
-      {
-        id: "title",
-        onMouseEnter: () => console.log("mouse enter"),
-      },
-      "Hello, I'm a span!"
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+        "Hello, I'm a title!"
+      </h3>
     );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("I'm clicked!"),
-        style: {
+    const Button = (
+      <button
+        style={{
           backgroundColor: "tomato",
-        },
-      },
-      "Click me"
+        }}
+        onClick={() => console.log("I'm clicked!")}
+      >
+        "Click me"
+      </button>
     );
-    const container = React.createElement("div", null, [h3, btn]);
+
+    const container = React.createElement("div", null, [Title, Button]);
     ReactDOM.render(container, root);
   </script>
 </html>
