--- a/reactJs/index_hard.html
+++ b/reactJs/index_hard.html
@@ -5,26 +5,27 @@
   </body>
   <script src="https://www.unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel">
+  <script>
     const root = document.getElementById("root");
-    const Title = (
-      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
-        "Hello, I'm a title!"
-      </h3>
+    const h3 = React.createElement(
+      "h3",
+      {
+        id: "title",
+        onMouseEnter: () => console.log("mouse enter"),
+      },
+      "Hello, I'm a span!"
     );
-    const Button = (
-      <button
-        style={{
+    const btn = React.createElement(
+      "button",
+      {
+        onClick: () => console.log("I'm clicked!"),
+        style: {
           backgroundColor: "tomato",
-        }}
-        onClick={() => console.log("I'm clicked!")}
-      >
-        "Click me"
-      </button>
+        },
+      },
+      "Click me"
     );
-
-    const container = React.createElement("div", null, [Title, Button]);
+    const container = React.createElement("div", null, [h3, btn]);
     ReactDOM.render(container, root);
   </script>
 </html>
