--- a/reactJs/index_easy.html
+++ b/reactJs/index_easy.html
@@ -8,12 +8,12 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
+    const Title = () => (
       <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
-        "Hello, I'm a title!"
+        Hello, I'm a title!
       </h3>
     );
-    const Button = (
+    const Button = () => (
       <button
         style={{
           backgroundColor: "tomato",
@@ -24,7 +24,12 @@
       </button>
     );
 
-    const container = React.createElement("div", null, [Title, Button]);
-    ReactDOM.render(container, root);
+    const Container = () => (
+      <div>
+        <Title />
+        <Button />
+      </div>
+    );
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
