--- a/reactJs/index_easy.html
+++ b/reactJs/index_easy.html
@@ -14,6 +14,8 @@
       const onClick = () => {
         setCounter(counter + 1);
       };
+      console.log("rendered");
+      console.log(counter);
 
       return (
         <div>
@@ -26,3 +28,13 @@
     ReactDOM.render(<App />, root);
   </script>
 </html>
+
+/* function App() { const [counter #값, state# , setCounter #값을 업데이트 시킬
+함수. 실행 후 값에 저장된다#] = React.useState(0) #리액트사용도구. 초기값 0# ;
+const onClick = () => { setCounter(counter + 1); }; console.log("rendered");
+console.log(counter); return (
+<div>
+  <h3>Total clicks : {counter}</h3>
+  <button onClick="{onClick}">Click me</button>
+</div>
+); } */
