--- a/reactJs/index_easy.html
+++ b/reactJs/index_easy.html
@@ -12,7 +12,8 @@
     function App() {
       const [counter, setCounter] = React.useState(0);
       const onClick = () => {
-        setCounter(counter + 1);
+        //setCounter(counter + 1);
+        setCounter((current) => current + 1); // 위의 주석과 같은 행동을 하지만 조금 더 안전함. 리액트가 current가 현재값이라는걸 보장한대.
       };
       console.log("rendered");
       console.log(counter);
@@ -28,13 +29,3 @@
     ReactDOM.render(<App />, root);
   </script>
 </html>
-
-/* function App() { const [counter #값, state# , setCounter #값을 업데이트 시킬
-함수. 실행 후 값에 저장된다#] = React.useState(0) #리액트사용도구. 초기값 0# ;
-const onClick = () => { setCounter(counter + 1); }; console.log("rendered");
-console.log(counter); return (
-<div>
-  <h3>Total clicks : {counter}</h3>
-  <button onClick="{onClick}">Click me</button>
-</div>
-); } */
