--- a/reactJs/unit_conversion.html
+++ b/reactJs/unit_conversion.html
@@ -11,14 +11,14 @@
 
     function App() {
       const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
+      const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
         setAmount(event.target.value);
       };
       const reset = () => setAmount(0);
-      const onFlip = () => {
+      const onInvert = () => {
         reset();
-        setFlipped((current) => !current);
+        setInverted((current) => !current);
       };
       return (
         <div>
@@ -26,28 +26,30 @@
           <div>
             <label htmlfor="minutes">Minutes</label>
             <input
-              value={flipped ? amount * 60 : amount} // 조건 ? true일 때 실행할 코드 : false일 때 실행할 코드
+              value={inverted ? amount * 60 : amount} // 조건 ? true일 때 실행할 코드 : false일 때 실행할 코드
               id="minutes"
               placeholder="Minutes"
               type="number"
               onChange={onChange}
-              disabled={flipped}
+              disabled={inverted}
             />
           </div>
 
           <div>
             <label htmlfor="hours">Hours</label>
             <input
-              value={flipped ? amount : Math.round(amount / 60)}
+              value={inverted ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
-              disabled={!flipped}
+              disabled={!inverted}
               onChange={onChange}
             />
           </div>
           <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>Flip</button>
+          <button onClick={onInvert}>
+            {inverted ? "Turn back" : "Invert"}
+          </button>
         </div>
       );
     }
