--- a/public/index.html
+++ b/public/index.html
@@ -123,17 +123,21 @@
         padding-bottom: 80px;
         background: linear-gradient(135deg, #ff9500 0%, #ffb800 100%);
         color: white;
+        overflow: hidden;
       }
 
       .hero-container {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
       }
 
       .hero-text {
         flex: 1;
         max-width: 600px;
+        position: relative;
+        z-index: 2;
       }
 
       .hero-text h2 {
@@ -152,13 +156,44 @@
       .hero-image {
         flex: 1;
         text-align: right;
+        position: relative;
+        z-index: 1;
       }
 
       .hero-image img {
         max-width: 100%;
         height: auto;
-        border-radius: 10px;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+        mask-image: linear-gradient(
+          to right,
+          transparent,
+          black 20%,
+          black 80%,
+          transparent 100%
+        );
+        -webkit-mask-image: linear-gradient(
+          to right,
+          transparent,
+          black 20%,
+          black 80%,
+          transparent 100%
+        );
+        filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.15));
+        position: relative;
+        z-index: 2;
+      }
+
+      /* 타원형 강조 효과 */
+      .hero-image::before {
+        content: "";
+        position: absolute;
+        top: -30%;
+        right: -20%;
+        width: 140%;
+        height: 160%; /* 높이를 더 크게 하여 타원형으로 만듦 */
+        background: rgba(255, 245, 224, 0.25); /* 연한 노란색 */
+        border-radius: 50%;
+        z-index: 1;
+        transform: rotate(-15deg); /* 약간 기울임 */
       }
 
       /* Features Section */
@@ -574,16 +609,21 @@
       @media (max-width: 992px) {
         .hero-container {
           flex-direction: column;
-        }
-
-        .hero-text,
-        .hero-image {
-          max-width: 100%;
           text-align: center;
         }
 
         .hero-text {
           margin-bottom: 40px;
+          max-width: 100%;
+        }
+
+        .hero-image {
+          max-width: 80%;
+          margin: 0 auto;
+        }
+
+        .hero-image::before {
+          display: none;
         }
 
         .features-grid {
@@ -752,7 +792,7 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="./images/back.webp" alt="코딩 교육 이미지" />
+          <img src="./images/teacher.png" alt="코딩 교육 이미지" />
         </div>
       </div>
     </section>
